--- a/TaggedNotes/App.config
+++ b/TaggedNotes/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-	<add key="ConnString" value="Data Source=..\..\..\..\TaggedNotes.Model\test.db"/>
+	<add key="ConnString" value="Data Source=.\test.db"/>
   </appSettings>
 </configuration>
