test.db is copied to Output Directory if it's newer

--- a/TaggedNotes.Model/TaggedNotes.Model.csproj
+++ b/TaggedNotes.Model/TaggedNotes.Model.csproj
@@ -17,4 +17,10 @@
     <ProjectReference Include="..\TaggedNotes.Interfaces\TaggedNotes.Interfaces.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="test.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
