Preserver the newest database file in the output dir

--- a/TaggedNotes.Model/TaggedNotes.Model.csproj
+++ b/TaggedNotes.Model/TaggedNotes.Model.csproj
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <None Update="test.db">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
